import { DTO } from "..";

export class NoneResponse implements DTO {
    
}